Fix users listing layout issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -81,6 +81,7 @@ textarea {
 
 .pagination {
   text-align: center;
+  margin-top: 2rem;
 }
 
 .previous_page,
